# DIAG

./: .gitignore  .pre-commit-config.yaml
DIAG/: pyproject.toml
DIAG/app/: api.py  ws.py
DIAG/core/: __init__.py
DIAG/core/adapter/: __init__.py  elm327.py
DIAG/core/capabilities/: __init__.py  cache.py
DIAG/core/transport/: __init__.py  obd_client.py  serial_client.py
DIAG/docs/: adapter_guide.md  pid_matrix.md  quick_start.md  troubleshooting.md
DIAG/docs/ui/: architecture.md  flutter_getting_started.md  implementation_plan.md  localization.md
DIAG/services/: __init__.py  dtc_manager.py  log_pipeline.py  pid_reader.py  poll_scheduler.py  session_controller.py
DIAG/tests/: conftest.py
DIAG/tests/integration/: test_placeholder.py
DIAG/tests/unit/: test_placeholder.py
DIAG/tools/: elm_validate.py
DIAG/ui/flutter/: README.md  l10n.yaml  pubspec.yaml
DIAG/ui/flutter/android/app/: build.gradle
DIAG/ui/flutter/ios/Runner/: Info.plist
DIAG/ui/flutter/ios/Runner.xcodeproj/: project.pbxproj
DIAG/ui/flutter/lib/: app.dart  main.dart
DIAG/ui/flutter/lib/l10n/: app_ar.arb  app_en.arb  app_fa.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_en.dart  app_localizations_fa.dart  app_localizations_ru.dart  app_localizations_zh.dart  app_ru.arb  app_zh.arb
DIAG/ui/flutter/lib/services/: diag_api.dart  (+1 more)
DIAG/ui/flutter/linux/: CMakeLists.txt  my_application.cc
DIAG/ui/flutter/test/: widget_test.dart
DIAG/ui/flutter/web/: index.html  manifest.json
DIAG/ui/flutter/windows/: CMakeLists.txt
DIAG/ui/templates/: dashboard.html
(+13 files in other folders)
