[tool.poetry]
name = "diag-platform"
version = "0.1.0"
description = "Phase 1 diagnostic MVP"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pyserial = "^3.5"
python-obd = "^0.7.1"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.5.6"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
